<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pamparampa.cardsexcercise2.DeckCountChooseActivity">

    <TextView
        android:id="@+id/deckCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deck_count"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:id="@+id/deckCountSpinner"
        android:layout_width="368dp"
        android:layout_height="24dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="119dp"
        android:layout_below="@+id/deckCountTextView"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@+id/deckCountTextView"
        android:layout_alignEnd="@+id/deckCountTextView"
        android:layout_alignLeft="@+id/deckCountTextView"
        android:layout_alignStart="@+id/deckCountTextView" />


    <Button
        android:id="@+id/okButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:onClick="onOk"
        android:text="@string/ok"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="253dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/deckCountSpinner"
        android:layout_toStartOf="@+id/deckCountSpinner" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:onClick="onCancel"
        android:text="@string/cancel"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="253dp"
        android:layout_alignBaseline="@+id/okButton"
        android:layout_alignBottom="@+id/okButton"
        android:layout_toRightOf="@+id/deckCountSpinner"
        android:layout_toEndOf="@+id/deckCountSpinner" />

</RelativeLayout>
